Format v2: typed lineage columns, float32 embeddings, snapshot resolution
Lineage lived in a map<string,string>, which cannot be partitioned, sorted,
or range-pruned, and stored longs as strings so range comparisons compared
lexically. Promote it to typed columns and repartition so that reading one
embedding version prunes partitions instead of scanning every version ever
materialized.

Schema changes (vector_embeddings, format version 2):

  + source_snapshot_id  long     which source snapshot this derives from
  + chunk_ordinal       int      position within the row's chunk sequence
  + embedding_model     string   was model_name
  + embedding_version   string   pins a materialization, enabling coexistence
  + embedding_dim       int
  + preprocessing_id    string   hash of the text-construction config
  + model_version       string   synthetic partition column
  + deleted             boolean  was metadata["deleted"]
  ~ embedding           list<float>, was list<double>
  ~ text                now optional; a tombstone carries none
  ~ partition spec      (source_table, model_version), was (source_table)

float32 rather than float64 because every embedding model emits float32, so
doubles doubled storage for no precision. At 500M rows x 384 dims that is
~1.5TB saved, which is what makes two model versions coexisting affordable.

Resolution now orders by source_snapshot_id, with created_at only breaking
ties inside one snapshot. Wall clock is metadata about the pipeline run, not
about the data version: it is non-deterministic across machines and cannot
answer "what was live at source snapshot N?". Adds liveVectorsAsOf() so an
embedding set is reproducible for a given target snapshot.

vector_id is now derived from lineage via SHA-256 instead of
UUID.randomUUID(), so re-materializing a snapshot is idempotent and the
manifest and evaluation results have a stable handle to reference. The key
deliberately excludes the source data-file path, since compaction rewrites
fil